tests/baselines/reference/interfaceWithPrivateMember.errors.txt
tests/cases/conformance/types/namedTypes/interfaceWithPrivateMember.ts(4,5): error TS1131: Property or signature expected.
tests/cases/conformance/types/namedTypes/interfaceWithPrivateMember.ts(8,5): error TS1131: Property or signature expected.
tests/cases/conformance/types/namedTypes/interfaceWithPrivateMember.ts(12,5): error TS1131: Property or signature expected.
tests/cases/conformance/types/namedTypes/interfaceWithPrivateMember.ts(13,1): error TS1128: Declaration or statement expected.
tests/cases/conformance/types/namedTypes/interfaceWithPrivateMember.ts(12,16): error TS2304: Cannot find name 'string'.


==== tests/cases/conformance/types/namedTypes/interfaceWithPrivateMember.ts (5 errors) ====
    // interfaces do not permit private members, these are errors
    
    interface I {
        private x: string;
        ~~~~~~~
!!! error TS1131: Property or signature expected.
    }
    
    interface I2<T> {
        private y: T;
        ~~~~~~~
!!! error TS1131: Property or signature expected.
    }
    
    var x: {
        private y: string;
        ~~~~~~~
!!! error TS1131: Property or signature expected.
                   ~~~~~~
!!! error TS2304: Cannot find name 'string'.
    }
    ~
!!! error TS1128: Declaration or statement expected.